<resources>
    <string name="app_name">Roads Guide</string>
    <string name="app_title">Real-Time \n Road Conditions Guide</string>
    <string name="app_logo_img">App Logo</string>

    <string name="action_home">Home</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="about_body">Version: 1.0
        \n\nData set courtesy of:
        \nRoad Restrictions - Transportation
        \nData catalogue | City of Toronto
        \n Maps Icons Collection:
        \nhttps://mapicons.mapsmarker.com
        \n\nCreated by: Ravideep Dhupia
        \n\nBachelor of Technology, \nSoftware Development
        \nSeneca@York </string>
    <string name="about_title">About ROADS GUIDE</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_search_restrictions">Search Location</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_map">Map</string>
    <string name="searchHint">(Street name / District / Inter-section) :</string>
    <string name="check1">Major Impact</string>
    <string name="check2">Moderate Impact</string>
    <string name="check3">Minor Impact</string>
    <string name="searchButton">Search</string>
    <string name="detail">Detail</string>

    <string-array name="durations">
        <item>Search Restrictions for Today</item>
        <item>Search Restrictions for Tomorrow</item>
        <item>Search Restrictions for This Week</item>
    </string-array>

    <string name="title_activity_results_list">ResultsListActivity</string>
    <string name="searchListButton">Search Road Restrictions</string>
    <string name="searchMapButton">Road Restrictions Map</string>
    <string name="title_activity_maps">Map Search</string>
    <string name="gotToCurrent">Go to current location</string>
    <string name="majorCheckMap">Major</string>
    <string name="ModCheckMap">Moderate</string>
    <string name="MinorCheckMap">Minor</string>
    <string name="title_activity_search_results_list">Closures List</string>

    <string name="title_activity_closure_details">Closure Details</string>
</resources>
