<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_address"
        android:layout_alignParentTop="true"
        android:hint="Current Location"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_mapSearch"
        android:src="@drawable/search_title_icon"
        android:padding="4dp"
        android:background="#0000FF"
        android:contentDescription="@string/searchButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/editText_address"
        android:layout_marginTop="1dp"
        android:onClick="onMapSearch"
        android:layout_above="@+id/map" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_goToCurrent"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/imageButton_mapSearch"
        android:src="@drawable/ic_action_locate"
        android:onClick="goToCurrent"
        android:layout_marginTop="1dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/gotToCurrent"
        android:layout_above="@+id/map" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MapCheckboxesLLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/editText_address">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/majorCheckMap"
        android:id="@+id/checkBox4"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ModCheckMap"
        android:id="@+id/checkBox5"
        android:checked="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MinorCheckMap"
        android:id="@+id/checkBox6"
        android:checked="true"/>


    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:id="@+id/map"
    tools:context="rsdhupia.ca.roadsguide.MapsActivity"
    android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MapCheckboxesLLayout" />



</RelativeLayout>
