<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rsdhupia.ca.roadsguide.SearchRestrictionsActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:labelFor="@+id/multiAutoCompleteTextView"
        android:text="Search:"
        android:id="@+id/textViewSearch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:labelFor="@+id/multiAutoCompleteTextView"
        android:text="@string/searchHint"
        android:id="@+id/textViewSearchHint"/>


    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/autoCompleteTextView" />


    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton_search"
        android:src="@drawable/search_title_icon"
        android:padding="4dp"
        android:background="#0000FF"
        android:contentDescription="@string/searchButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Filters:"
        android:id="@+id/textView" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/check1"
        android:id="@+id/checkBox"
        android:layout_marginTop="15dp"
        android:checked="true"/>

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/check2"
        android:id="@+id/checkBox2"
        android:checked="true"/>

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/check3"
        android:id="@+id/checkBox3"
        android:checked="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/spinner_search"
        android:dropDownWidth="fill_parent"
        android:entries="@array/durations"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/border"/>


</LinearLayout>
